clusterIP.yml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-app-service
spec:
  type: ClusterIP
  selector:
    app: nodejs-app
  ports:
    - port: 3000         
      targetPort: 3000
