headless-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
spec:
  clusterIP: None  
  selector:
    app: mariadb    
  ports:
    - name: mysql
      port: 3306
      targetPort: 3306
